# BCF_info_tag_counter

./: Cargo.toml  README
src/: main.rs
