[package]
name = "cosmic_count"
version = "0.1.0"
authors = ["Josh Weinstock <josh82093@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.32.0"
log = "0.4"
env_logger ="0.7.1"
serde_json = "1.0"
chrono = "0.4"
